overflow fix

--- a/assignment3/style.css
+++ b/assignment3/style.css
@@ -18,8 +18,7 @@ html, body {
     /* border is for reference only. 
     border: 1px rgba(128, 128, 128, 0.258) dashed; */
     background-color: black;
-    overflow: visible;
-    overflow-y: scroll; /* in case the "boxes" are too short to display. overflow: visible does not work unfortunately. */
+    overflow: auto;
     max-width: 10vw;
     font-size: 16px;
     padding: 3px;
